--- a/app/templates/quality_control/qc_saved.html
+++ b/app/templates/quality_control/qc_saved.html
@@ -29,11 +29,11 @@
 <br>
 <div class="row">
 	<div class="col-md-12">
-		<div class="row">
+		<!--div class="row">
 			<div class="col-md-12" id="qc_title">
 				<input type="text" class="form-control qc-info text-center" style="font-size: 15px; font-weight: bold;" placeholder="Title">
 			</div>
-		</div>
+		</div-->
 		<br>
 		<form action method="post" class="form" role="form">
 			{{ form.csrf_token() }}
@@ -81,291 +81,6 @@
 		</form>
 	</div>
 </div>	
-<div style="margin-top:20px;margin-bottom-20px">
-	<br>
-		{% if level3_data == True %}
-		<div class="col-md-12">
-			<div class="col-md-6">
-			<span><h5><strong>Given Values</strong></h5></span>
-				<div class="col-md-4">
-					<label class="control-label">Control 1 Mean:</label>
-					<input id="lvl1Mean" class="form-control decTostring" value="{{ qc_values1.control_mean }}" readonly>
-					<br>
-					<label class="control-label">Control 1 SD:</label>
-					<input id="lvl1Stndev" class="form-control decTostring" value="{{ qc_values1.control_sd }}" readonly>
-					<br>
-					<label class="control-label">Control 1 CV:</label>
-					<input id="lvl1CV" class="form-control decTostring" readonly>
-				</div>
-				<div class="col-md-4">
-					<label class="control-label">Control 2 Mean:</label>
-					<input id="lvl2Mean" class="form-control decTostring" value="{{ qc_values2.control_mean }}" readonly>
-					<br>
-					<label class="control-label"> Control 2 SD:</label>
-					<input id="lvl2Stndev" class="form-control decTostring" value="{{ qc_values2.control_sd }}" readonly>
-					<br>
-					<label class="control-label">Control 2 CV:</label>
-					<input id="lvl2CV" class="form-control decTostring" readonly>
-				</div>
-				<div class="col-md-4">
-					<label class="control-label">Control 3 Mean:</label>
-					<input id="lvl3Mean" class="form-control decTostring" value="{{ qc_values3.control_mean }}" readonly>
-					<br>
-					<label class="control-label"> Control 3 SD:</label>
-					<input id="lvl3Stndev" class="form-control decTostring" value="{{ qc_values3.control_sd }}" readonly>
-					<br>
-					<label class="control-label">Control 3 CV:</label>
-					<input id="lvl3CV" class="form-control decTostring" readonly>
-				</div>
-			</div>
-			<div class="col-md-6" id="calculted_mean_container">
-			<span><h5><strong>Calculated Values</strong></h5></span>
-				<div class="col-md-4">
-					<label class="control-label">Control 1 Mean:</label>
-					<input id="lvl1MeanCalc" class="form-control decTostring" readonly>
-					<br>
-					<label class="control-label">Control 1 SD:</label>
-					<input id="lvl1StndevCalc" class="form-control decTostring" readonly>
-					<br>
-					<label class="control-label">Control 1 CV:</label>
-					<input id="lvl1CVCalc" class="form-control decTostring" readonly>
-				</div>
-				<div class="col-md-4">
-					<label class="control-label">Control 2 Mean:</label>
-					<input id="lvl2MeanCalc" class="form-control decTostring" readonly>
-					<br>
-					<label class="control-label"> Control 2 SD:</label>
-					<input id="lvl2StndevCalc" class="form-control decTostring" readonly>
-					<br>
-					<label class="control-label">Control 2 CV:</label>
-					<input id="lvl2CVCalc" class="form-control decTostring" readonly>
-				</div>
-				<div class="col-md-4">
-					<label class="control-label">Control 3 Mean:</label>
-					<input id="lvl3MeanCalc" class="form-control decTostring"readonly>
-					<br>
-					<label class="control-label"> Control 3 SD:</label>
-					<input id="lvl3StndevCalc" class="form-control " readonly>
-					<br>
-					<label class="control-label">Control 3 CV:</label>
-					<input id="lvl3CVCalc" class="form-control decTostring" readonly>
-				</div>
-				<span><input type="checkbox" id="use_calc_values"> Use calculated values for LJ chart</span>
-			</div>
-		</div>
-		<div class="col-md-12" style="margin-top:20px;margin-bottom-20px;;font-size:11px;">
-			<input class="col-md-1" value="Run Date" readonly>
-			<input class="col-md-1" value="Control 1" readonly>
-			<input class="col-md-1" value="Control 2" readonly>
-			<input class="col-md-1" value="Control 3" readonly>
-			<input class="col-md-1" value="Run Date" readonly>
-			<input class="col-md-1" value="Control 1" readonly>
-			<input class="col-md-1" value="Control 2" readonly>
-			<input class="col-md-1" value="Control 3" readonly>
-			<input class="col-md-1" value="Run Date" readonly>
-			<input class="col-md-1" value="Control 1" readonly>
-			<input class="col-md-1" value="Control 2" readonly>
-			<input class="col-md-1" value="Control 3" readonly>
-			
-			{% for q in qc_res %}
-			<input class="col-md-1 run_date_data" value="{{ q.run_date }}" readonly>
-			{% if q.lvl1|int or q.lvl1|int != 0 %}
-			<input class="col-md-1 decTostring control1_data" style="color:blue;" value="{{ q.lvl1 }}">
-			{% else %}
-			<input class="col-md-1 control1_data" value="">
-			{% endif %}
-			{% if q.lvl2|int or q.lvl2|int != 0 %}
-			<input class="col-md-1 decTostring control2_data" style="color:red;" value="{{ q.lvl2 }}">
-			{% else %}
-			<input class="col-md-1 control2_data" value="">
-			{% endif %}
-			{% if q.lvl3|int or q.lvl3|int != 0 %}
-			<input class="col-md-1 decTostring control3_data" style="color:yellow;" value="{{ q.lvl3 }}" >
-			{% else %}
-			<input class="col-md-1 control3_data" value="">
-			{% endif %}
-			{% endfor %}
-		</div>
-		
-		{% elif level2_data == True %}
-		<div class="col-md-12">
-			<div class="col-md-6">
-			<span><h5><strong>Given Values</strong></h5></span>
-				<div class="col-md-4">
-					<label class="control-label">Control 1 Mean:</label>
-					<input id="lvl1Mean" class="form-control decTostring" value="{{ qc_values1.control_mean }}" readonly>
-					<br>
-					<label class="control-label">Control 1 SD:</label>
-					<input id="lvl1Stndev" class="form-control decTostring" value="{{ qc_values1.control_sd }}" readonly>
-					<br>
-					<label class="control-label">Control 1 CV:</label>
-					<input id="lvl1CV" class="form-control decTostring" readonly>
-				</div>
-				<div class="col-md-4">
-					<label class="control-label">Control 2 Mean:</label>
-					<input id="lvl2Mean" class="form-control decTostring" value="{{ qc_values2.control_mean }}" readonly>
-					<br>
-					<label class="control-label"> Control 2 SD:</label>
-					<input id="lvl2Stndev" class="form-control decTostring" value="{{ qc_values2.control_sd }}" readonly>
-					<br>
-					<label class="control-label"> Control 2 CV:</label>
-					<input id="lvl2CV" class="form-control decTostring" readonly>
-				</div>
-			</div>
-			<div class="col-md-6" id="calculted_mean_container">
-			<span><h5><strong>Calculated Values</strong></h5></span>
-				<div class="col-md-4">
-					<label class="control-label">Control 1 Mean:</label>
-					<input id="lvl1MeanCalc" class="form-control decTostring" readonly>
-					<br>
-					<label class="control-label">Control 1 SD:</label>
-					<input id="lvl1StndevCalc" class="form-control decTostring" readonly>
-					<br>
-					<label class="control-label">Control 1 CV:</label>
-					<input id="lvl1CVCalc" class="form-control decTostring" readonly>
-				</div>
-				<div class="col-md-4">
-					<label class="control-label">Control 2 Mean:</label>
-					<input id="lvl2MeanCalc" class="form-control decTostring" readonly>
-					<br>
-					<label class="control-label"> Control 2 SD:</label>
-					<input id="lvl2StndevCalc" class="form-control decTostring" readonly>
-					<br>
-					<label class="control-label">Control 2 CV:</label>
-					<input id="lvl2CVCalc" class="form-control decTostring" readonly>
-				</div>
-				<span><input type="checkbox" id="use_calc_values"> Use calculated values for LJ chart</span>
-			</div>
-		</div>
-		<div class="col-md-12" style="margin-top:20px;margin-bottom-20px;;font-size:11px;">
-			<input class="col-md-1" value="Run Date" readonly>
-			<input class="col-md-1" value="Control 1" readonly>
-			<input class="col-md-1" value="Control 2" readonly>
-			<input class="col-md-1" value="Run Date" readonly>
-			<input class="col-md-1" value="Control 1" readonly>
-			<input class="col-md-1" value="Control 2" readonly>
-			<input class="col-md-1" value="Run Date" readonly>
-			<input class="col-md-1" value="Control 1" readonly>
-			<input class="col-md-1" value="Control 2" readonly>
-			<input class="col-md-1" value="Run Date" readonly>
-			<input class="col-md-1" value="Control 1" readonly>
-			<input class="col-md-1" value="Control 2" readonly>
-			
-			{% for q in qc_res %}
-			<input class="col-md-1 run_date_data" value="{{ q.run_date }}">
-			{% if q.lvl1|int or q.lvl1|int != 0 %}
-			<input class="col-md-1 control1_data decTostring" style="color:blue;" value="{{ q.lvl1 }}">
-			{% else %}
-			<input class="col-md-1 control1_data" value="">
-			{% endif %}
-			{% if q.lvl2|int or q.lvl2|int != 0 %}
-			<input class="col-md-1 control2_data decTostring" style="color:red;" value="{{ q.lvl2 }}">
-			{% else %}
-			<input class="col-md-1 control2_data" value="">
-			{% endif %}
-			{% endfor %}
-		</div>
-		{% elif level1_data == True %}
-		<div class="col-md-12">
-			<div class="col-md-6">
-			<span><h5><strong>Given Values</strong></h5></span>
-				<div class="col-md-4">
-					<label class="control-label">Control 1 Mean:</label>
-					<input id="lvl1Mean" class="form-control decTostring" value="{{ qc_values1.control_mean }}" readonly>
-					<br>
-					<label class="control-label"> Control 1 SD:</label>
-					<input id="lvl1Stndev" class="form-control decTostring" value="{{ qc_values1.control_sd }}" readonly>
-					<br>
-					<label class="control-label">Control 1 CV:</label>
-					<input id="lvl1CV" class="form-control decTostring" readonly>
-				</div>
-			</div>
-			<div class="col-md-6" id="calculted_mean_container">
-			<span><h5><strong>Calculated Values</strong></h5></span>
-				<div class="col-md-4">
-					<label class="control-label">Control 1 Mean:</label>
-					<input id="lvl1MeanCalc" class="form-control decTostring" readonly>
-					<br>
-					<label class="control-label">Control 1 SD:</label>
-					<input id="lvl1StndevCalc" class="form-control decTostring" readonly>
-					<br>
-					<label class="control-label">Control 1 CV:</label>
-					<input id="lvl1CVCalc" class="form-control decTostring" readonly>
-				</div>
-				<span><input type="checkbox" id="use_calc_values"> Use calculated values for LJ chart</span>
-			</div>
-		</div>
-		<div class="col-md-12" style="margin-top:20px;margin-bottom-20px;;font-size:11px;">
-			<input class="col-md-1" value="Run Date" readonly>
-			<input class="col-md-1" value="Control 1" readonly>
-			<input class="col-md-1" value="Run Date" readonly>
-			<input class="col-md-1" value="Control 1" readonly>
-			<input class="col-md-1" value="Run Date" readonly>
-			<input class="col-md-1" value="Control 1" readonly>
-			<input class="col-md-1" value="Run Date" readonly>
-			<input class="col-md-1" value="Control 1" readonly>
-			
-			{% for q in qc_res %}
-			<input class="col-md-1 run_date_data" value="{{ q.run_date }}">
-			{% if q.lvl1|int or q.lvl1|int != 0 %}
-			<input class="col-md-1 control1_data decTostring" style="color:blue;" value="{{ q.lvl1 }}">
-			{% else %}
-			<input class="col-md-1 control1_data" value="">
-			{% endif %}
-			{% endfor %}
-		</div>
-		{% endif %}
-</div>
-
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-md-4">
-			<br>
-			<p><strong>QC Lots</strong></p>
-			{% if qc1_lot %}<p>Control 1 Lot: {% for q in qc1_lot %}<span>{{ q.lot_no }}, </span>{% endfor %}</p>{% endif %}
-			{% if qc2_lot %}<p>Control 2 Lot: {% for q in qc2_lot %}<span>{{ q.lot_no }}, </span>{% endfor %}</p>{% endif %}
-			{% if qc3_lot %}<p>Control 3 Lot: {% for q in qc3_lot %}<span>{{ q.lot_no }}, </span>{% endfor %}</p>{% endif %}
-		</div>
-		<div class="col-md-4">
-			<br>
-			<p><strong>Reagent Lots</strong></p>
-			{% if qc_rgt_lot %}<p>Reagent Lot: {% for q in qc_rgt_lot %}<span>{{ q.lot_no }}, </span>{% endfor %}</p>{% endif %}
-		</div>
-	</div>
-	<div class="row text-center">
-		<div class="col-md-12 chart-container text-center" id="chartContainer">
-			<canvas id="chartjs" ></canvas>
-		</div>
-		
-	</div>
-	
-	<button id="add_comment_btn" class="btn btn-primary btn-sm no_print">Add comment</button>
-	<br>
-	<div class="row">
-		<div class="col-md-6" id="comment_form_container">
-			{{ wtf.quick_form(comment_form) }}
-		</div>
-		<br>
-		<div class="col-md-12">
-			{% if comments %}
-			<label>Comments:</label>
-			<textarea class="form-control" rows="5">
-			{% for c in comments %}
-			{{ c[0] }}: {{ c[1] }}
-			{% endfor %}
-			</textarea>
-			{% endif %}
-		</div>
-	</div>
-</div>
-<div class="container-fluid visible-print-block">
-	<div class="row">
-		<div class="col-md-6">
-			<p>Generated by: {{ user.firstname }} {{ user.lastname }}</p>
-			<p>Date: {{ moment().format('LLLL') }}. </p>
-		</div>
-	</div>
-</div>
 
 {% endblock %}
 
@@ -373,112 +88,15 @@
 {% block styles %}
 {{ super() }}
 <style>
-#chartContainer {
-	position: relative;
-	--border: 2px solid #ddd;
-	margin-left: 1em;
-	margin-right: auto;
-	display: block;
-	width: 100%;
-	border-radius: 8px;
-}
-@media print {
-	body {
-		font-size: 10px;
-	}
 
-	.no_print {
-		display: none;
-	}
-	#qc_title {
-		margin-top: 40px;
-	}
-	
-	.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-        float: left;
-   }
-   .col-md-12 {
-        width: 100%;
-   }
-   .col-md-11 {
-        width: 91.66666667%;
-   }
-   .col-md-10 {
-        width: 83.33333333%;
-   }
-   .col-md-9 {
-        width: 75%;
-   }
-   .col-md-8 {
-        width: 66.66666667%;
-   }
-   .col-md-7 {
-        width: 58.33333333%;
-   }
-   .col-md-6 {
-        width: 50%;
-   }
-   .col-md-5 {
-        width: 41.66666667%;
-   }
-   .col-md-4 {
-        width: 33.33333333%;
-   }
-   .col-md-3 {
-        width: 25%;
-   }
-   .col-md-2 {
-        width: 16.66666667%;
-   }
-   .col-md-1 {
-        width: 8.33333333%;
-   }
-   
-   #chartContainer {
-		position: relative;
-		width: 90%;
-		margin-left: 5vw;
-		margin-right: auto;
-	}
-	
-	#chartjs {
-		padding-left: 0;
-		padding-right: 0;
-		margin-left: auto;
-		margin-right: auto;
-		display: block;
-		width: 80%;
-	}
-	
-	.qcImportData1 {
-		color: blue;
-	}
-
-	.qcImportData2 {
-		color: red;
-	}
-
-	.qcImportData3 {
-		color: #cccc0e;
-	}
-}
-
-#calculted_mean_container {
-	display: none;
-}
 </style>
 {% endblock %}
 {% block scripts %}
 {{ super() }}
-<!--script src="{{url_for('static', filename='js/qc.js')}}"></script-->
 <script>
-google.charts.load('current', {'packages':['line', 'corechart']});
 
 $(document).ready(function() {
-	$('#comment_form_container').css('display', 'none');
-	$('#add_comment_btn').click(function() {
-		$('#comment_form_container').css('display', 'block');
-	});
+	
 	$('select#qcrf_machine option').addClass(function() {
 		{% for ma in machine_analyte_link %}
 			return this.value;
@@ -551,7 +169,7 @@ $(document).ready(function() {
 		return false;
 	});
 });
-
+/*
 $(document).ready(function() {
 	$(".decTostring").each(function() {
 		$(this).val(parseFloat($(this).val()));
@@ -779,8 +397,8 @@ $("#create_chart_btn").click(function(){
 					0: {title: '',
 						baseline: ctrl1_mean,
 						ticks: [{v: p3sd1, f: '+3sd'}, {v: p2sd1, f: '+2sd'}, {v: p1sd1, f: '+1sd'}, {v: ctrl1_mean, f: 'mean'}, {v: n1sd1, f: '-1sd'}, {v: n2sd1, f: '-2sd'}, {v: n3sd1, f: '-3sd'}],
-						/*minValue: n3sd1,
-						maxValue: p3sd1,*/
+						//minValue: n3sd1,
+						//maxValue: p3sd1,
 						//viewWindowMode: 'maximized',
 						viewWindow: {
 							max: p3sd1,
@@ -790,8 +408,8 @@ $("#create_chart_btn").click(function(){
 					1: {title: '',
 						baseline: ctrl2_mean,
 						ticks: [{v: p3sd2, f: ''}, {v: p2sd2, f: ''}, {v: p1sd2, f: ''}, {v: ctrl2_mean, f: ''}, {v: n1sd2, f: ''}, {v: n2sd2, f: ''}, {v: n3sd2, f: ''}],
-						/*minValue: n3sd2,
-						maxValue: p3sd2,*/
+						//minValue: n3sd2,
+						//maxValue: p3sd2,
 						//viewWindowMode: 'maximized',
 						viewWindow: {
 							max: p3sd2,
@@ -801,8 +419,8 @@ $("#create_chart_btn").click(function(){
 					2: {title: '',
 						baseline: ctrl3_mean,
 						ticks: [{v: p3sd3, f: ''}, {v: p2sd3, f: ''}, {v: p1sd3, f: ''}, {v: ctrl3_mean, f: ''}, {v: n1sd3, f: ''}, {v: n2sd3, f: ''}, {v: n3sd3, f: ''}],
-						/*minValue: n3sd3,
-						maxValue: p3sd3,*/
+						//minValue: n3sd3,
+						//maxValue: p3sd3,
 						//viewWindowMode: 'maximized',
 						viewWindow: {
 							max: p3sd3,
@@ -821,9 +439,9 @@ $("#create_chart_btn").click(function(){
 						fontSize: 9
 					},
 				},			
-				/*vAxis: {
-					viewWindowMode: 'maximized',
-				},	*/					
+				//vAxis: {
+				//	viewWindowMode: 'maximized',
+				//},					
 				pointSize: 5,
 				annotations: {
 					textStyle: {
@@ -903,6 +521,6 @@ $(document).ready(function() {
 	var cv3 = parseFloat(($("#lvl3Stndev").val() / $("#lvl3Mean").val()) * 100);
 	cv3 = N(cv3, dp3);
 	$("#lvl3CV").val(cv3);
-});
+});*/
 </script>
 {% endblock %}
