updated charting now using zscore as sd

--- a/app/templates/quality_control/encode_qc_results.html
+++ b/app/templates/quality_control/encode_qc_results.html
@@ -80,28 +80,7 @@ $(document).ready(function() {
 				})
 				
 			});
-			/*$('#control2').empty();
-			$.getJSON($SCRIPT_ROOT + '/update_control_list', {
-				machine_id : $('#qcrf_machine').val(), 
-				company_id : {{ company.id }}, 
-				analyte_id :$('#qcrf_analyte').val()
-			}, function(data){
-				$.each(data.result, function(i, new_options){
-					$('#control2').append($('<option></option>').attr("value", new_options[0]).text(new_options[1]) );
-				})
-				
-			});
-			$('#control3').empty();
-			$.getJSON($SCRIPT_ROOT + '/update_control_list', {
-				machine_id : $('#qcrf_machine').val(), 
-				company_id : {{ company.id }}, 
-				analyte_id : $('#qcrf_analyte').val()
-			}, function(data){
-				$.each(data.result, function(i, new_options){
-					$('#control3').append($('<option></option>').attr("value", new_options[0]).text(new_options[1]) );
-				})
-				
-			});*/
+			
 		});
 		return false;
 	});
@@ -120,52 +99,35 @@ $(document).ready(function() {
 		$.getJSON($SCRIPT_ROOT + '/update_control_list', {
 			machine_id : $('#eqcrf_machine').val(), 
 			company_id : {{ company.id }}, 
-			analyte_id : $(this).val()
+			analyte_id : $(this).val(),
+			rlot_id : '0'
 		}, function(data){
 			$.each(data.result, function(i, new_options){
 				$('#eqcrf_control').append($('<option></option>').attr("value", new_options[0]).text(new_options[1]) );
 			})
 			
 		});
-		/*$('#control2').empty();
+		
+		return false;
+	});
+	
+	$('#eqcrf_reagent_lot').change(function(){
+		$('#eqcrf_control').empty();
 		$.getJSON($SCRIPT_ROOT + '/update_control_list', {
-			machine_id : $('#qcrf_machine').val(), 
 			company_id : {{ company.id }}, 
-			analyte_id : $(this).val()
+			analyte_id : $('#eqcrf_analyte').val(),
+			machine_id : $('#eqcrf_machine').val(), 
+			rlot_id : $(this).val()
 		}, function(data){
 			$.each(data.result, function(i, new_options){
-				$('#control2').append($('<option></option>').attr("value", new_options[0]).text(new_options[1]) );
+				$('#eqcrf_control').append($('<option></option>').attr("value", new_options[0]).text(new_options[1]) );
 			})
-			
 		});
-		$('#control3').empty();
-		$.getJSON($SCRIPT_ROOT + '/update_control_list', {
-			machine_id : $('#qcrf_machine').val(), 
-			company_id : {{ company.id }}, 
-			analyte_id : $(this).val()
-		}, function(data){
-			$.each(data.result, function(i, new_options){
-				$('#control3').append($('<option></option>').attr("value", new_options[0]).text(new_options[1]) );
-			})
-			
-		});*/
+				
 		return false;
 	});
 	
 	
-	/*$('#qcrf_analyte').change(function(){
-		$('#control1').empty();
-		$.getJSON($SCRIPT_ROOT + '/update_control_list', {
-			machine_id : $('#qcrf_machine').val(), 
-			analyte_id : $(this).val()
-		}, function(data){
-			$.each(data.result, function(i, new_options){
-				$('#control1').append($('<option></option>').attr("value", new_options[0]).text(new_options[1]) );
-			})
-			
-		});
-		return false;
-	});*/
 });
 
 
