--- a/app/templates/company_base.html
+++ b/app/templates/company_base.html
@@ -75,7 +75,7 @@
 	{% block doc_content %}
 	{% endblock %}
 {% block footer %}
-<footer style="position: fixed;left: 0;bottom: 0;width: 100%;background-color: #efefef;  color: black;text-align: center;font-size: 12px;margin-top:25px">© 2019 LABAPP, Inc. All Right Reserved<span style="float:right;"><a href="https://www.termsfeed.com/terms-service/50bee2071179de444b24dfb078934616" target="_blank">Terms of Service&nbsp;&nbsp;&nbsp;</a></span></footer>
+<footer style="position: fixed;left: 0;bottom: 0;width: 100%;background-color: #efefef;  color: black;text-align: center;font-size: 12px;margin-top:25px">© 2020 LABAPP, Inc. All Right Reserved<span style="float:right;"><a href="https://www.termsfeed.com/terms-service/50bee2071179de444b24dfb078934616" target="_blank" class="no_print">Terms of Service&nbsp;&nbsp;&nbsp;</a></span></footer>
 {% endblock %}
 {% endblock %}
 
