--- a/app/templates/quality_control/qc_nav.html
+++ b/app/templates/quality_control/qc_nav.html
@@ -2,6 +2,7 @@
 	<ul class="nav nav-pills">
 		{{ nav_link('quality_control', 'QC Basic') }}
 		{{ nav_link('saved_results', 'Saved QC') }}
+		{{ nav_link('qc_statistics', 'Statistics') }}
 		{{ nav_link('encode_qc_results', 'Upload QC Values') }}
 		{{ nav_link('qc_variables', 'Variables') }}
 	</ul>	
